fix failures for jaxrs and jsonp runner. Signed-off-by: gurunrao <gurunandan.rao@oracle.com>