@@ -110,12 +110,49 @@
             <groupId>org.jboss.arquillian.container</groupId>
             <artifactId>arquillian-glassfish-managed-6</artifactId>
             <version>1.0.0.Alpha1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.glassfish.jersey.inject</groupId>
+                    <artifactId>jersey-hk2</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jersey.core</groupId>
+                    <artifactId>jersey-client</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jersey.core</groupId>
+                    <artifactId>jersey-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jersey.media</groupId>
+                    <artifactId>jersey-media-multipart</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
-        
         <dependency>
             <groupId>org.glassfish.hk2</groupId>
             <artifactId>hk2-locator</artifactId>
             <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>3.1.0-M6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>3.1.0-M6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-common</artifactId>
+            <version>3.1.0-M6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>3.1.0-M6</version>
         </dependency>
         
     </dependencies>
@@ -163,11 +200,6 @@
                                         <artifactId>testng</artifactId>
                                         <version>${testng.version}</version>
                                         </artifactItem>
-                                    <artifactItem>
-                                        <groupId>org.apache.derby</groupId>
-                                        <artifactId>derby</artifactId>
-                                        <version>${derby.version}</version>
-                                    </artifactItem>
                                     <dependency>
                                         <groupId>org.netbeans.tools</groupId>
                                         <artifactId>sigtest-maven-plugin</artifactId>
@@ -184,7 +216,7 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <executions>
                         <execution>
-                            <id>StopDomain1</id>
+                            <id>stop-domain1</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -197,7 +229,7 @@
                             </configuration>
                         </execution>
                         <execution>
-                            <id>StartDomain1</id>
+                            <id>start-domain1</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -210,7 +242,7 @@
                             </configuration>
                         </execution>
                         <execution>
-                            <id>Enable Trace requests</id>
+                            <id>enable-trace-requests</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -224,7 +256,7 @@
                             </configuration>
                         </execution>
                         <execution>
-                            <id>Delete User j2ee</id>
+                            <id>delete-user-j2ee</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -237,14 +269,14 @@
                                     <argument>delete-file-user</argument>
                                     <argument>j2ee</argument>
                                 </arguments>
-                                <successCodes>
+                               <successCodes>
                                     <successCode>0</successCode>
                                     <successCode>1</successCode>
                                 </successCodes>
                             </configuration>
                         </execution>
                         <execution>
-                            <id>Add User j2ee</id>
+                            <id>add-user-j2ee</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -262,7 +294,7 @@
                             </configuration>
                         </execution>
                         <execution>
-                            <id>Delete User javajoe</id>
+                            <id>delete-user-javajoe</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -274,7 +306,7 @@
                                     <argument>${project.basedir}/javajoe.pass</argument>
                                     <argument>delete-file-user</argument>
                                     <argument>javajoe</argument>
-                                </arguments>
+                                </arguments>  
                                 <successCodes>
                                     <successCode>0</successCode>
                                     <successCode>1</successCode>
@@ -282,7 +314,7 @@
                             </configuration>
                         </execution>
                         <execution>
-                            <id>Add User javajoe</id>
+                            <id>add-user-javajoe</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -300,7 +332,7 @@
                             </configuration>
                         </execution>
                         <execution>
-                            <id>list users</id>
+                            <id>list-users</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -324,7 +356,7 @@
                                     <argument>--passwordfile</argument>
                                     <argument>${project.basedir}/javajoe.pass</argument>
                                     <argument>create-jvm-options</argument>
-                                    <argument>-Djimage.dir=${project.build.directory}/jdk11-bundle</argument>
+                                    <argument>-Djimage.dir=${project.build.directory}/jdk-bundle</argument>
                                 </arguments>
                             </configuration>
                         </execution>
@@ -340,28 +372,12 @@
                                     <argument>--passwordfile</argument>
                                     <argument>${project.basedir}/javajoe.pass</argument>
                                     <argument>create-jvm-options</argument>
-                                    <argument>--add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED</argument>
+                                    <argument>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</argument>
                                 </arguments>
                             </configuration>
                         </execution>
                         <execution>
-                            <id>add-opens-annotation-jvm-option</id>
-                            <phase>generate-test-resources</phase>
-                            <goals>
-                                <goal>exec</goal>
-                            </goals>
-                            <configuration>
-                                <executable>${project.build.directory}/${glassfish.toplevel.dir}/glassfish/bin/asadmin</executable>
-                                <arguments>
-                                    <argument>--passwordfile</argument>
-                                    <argument>${project.basedir}/javajoe.pass</argument>
-                                    <argument>create-jvm-options</argument>
-                                    <argument>--add-opens java.base/jdk.internal.vm.annotation=ALL-UNNAMED</argument>
-                                </arguments>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>StopDomain</id>
+                            <id>stop-domain2</id>
                             <phase>generate-test-resources</phase>
                             <goals>
                                 <goal>exec</goal>
@@ -400,25 +416,10 @@
                         </property>
                         </systemProperties>
                         <!--  end::logging[]  -->
-                        <!--  tag::ignore[]  -->
                         <systemPropertyVariables>
-                            <!--  Properties shared with Arquillian  -->
-                            <domain>domain1</domain>
-                            <adminHost>localhost</adminHost>
-                            <adminPort>4848</adminPort>
-                            <adminUser>admin</adminUser>
-                            <adminPassword></adminPassword>
-                            <tck_server>localhost</tck_server>
-                            <tck_hostname>localhost</tck_hostname>
-                            <tck_username>javajoe</tck_username>
-                            <tck_password>javajoe</tck_password>
-                            <tck_port>8080</tck_port>
-                            <tck_port_secure>8181</tck_port_secure>
-                            <GLASSFISH_HOME>${project.build.directory}/${glassfish.toplevel.dir}</GLASSFISH_HOME>
-                            <jimage.dir>${project.build.directory}/jdk11-bundle</jimage.dir>
-                            <signature.sigTestClasspath>${project.build.directory}/${glassfish.toplevel.dir}/glassfish/modules/jakarta.enterprise.concurrent-api.jar:${project.build.directory}/jdk11-bundle/java.base:${project.build.directory}/jdk11-bundle/java.rmi:${project.build.directory}/jdk11-bundle/java.sql:${project.build.directory}/jdk11-bundle/java.naming</signature.sigTestClasspath>
+                            <jimage.dir>${project.build.directory}/jdk-bundle</jimage.dir>
+                            <signature.sigTestClasspath>${project.build.directory}/${glassfish.toplevel.dir}/glassfish/modules/jakarta.enterprise.concurrent-api.jar:${project.build.directory}/jdk-bundle/java.base:${project.build.directory}/jdk-bundle/java.rmi:${project.build.directory}/jdk-bundle/java.sql:${project.build.directory}/jdk-bundle/java.naming</signature.sigTestClasspath>
                         </systemPropertyVariables>
-                        <!--  end::ignore[]  -->
                         <suiteXmlFiles>
                             <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                         </suiteXmlFiles>
